parsing and version changes